--- a/src/views/home.css
+++ b/src/views/home.css
@@ -34,19 +34,19 @@
   z-index: 1;
   position: absolute;
   align-items: flex-start;
-  background-color: #413c2e;
+  background-image: radial-gradient(#121212 40%, rgb(38 38 38) 50%);
 }
 .home-hero-image {
   flex: 0 0 auto;
   width: var(--dl-size-size-maxcontent);
   height: 100%;
   display: flex;
-  opacity: 0.5;
+  opacity: 0.35;
   z-index: 2;
   position: absolute;
   align-items: flex-start;
   background-size: cover;
-  background-image: url('https://images.unsplash.com/photo-1613142659418-718b2ae6940d?ixid=M3w5MTMyMXwwfDF8c2VhcmNofDE0fHxvcmNoZXN0cmF8ZW58MHx8fHwxNjk0ODYxNDY4fDA&ixlib=rb-4.0.3&w=1500');
+  background-image: url('group_picture_ff2mm_colorcorrected.jpg');
   background-position: center;
 }
 .home-banner-extension {
@@ -276,6 +276,7 @@
   border-radius: var(--dl-radius-radius-radius8);
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  object-fit: cover;
 }
 .home-play-container {
   top: calc(50% - 25px);
