--- a/src/views/home.css
+++ b/src/views/home.css
@@ -63,6 +63,7 @@
   width: auto;
   height: 100%;
   position: absolute;
+  opacity: 0.2;
 }
 .home-lottie-node1 {
   top: 0px;
@@ -70,6 +71,7 @@
   width: auto;
   height: 100%;
   position: absolute;
+  opacity: 0.2
 }
 .home-content-container {
   width: 100%;
