Added new event info; improved some code for it.

--- a/src/components/calendar-component.css
+++ b/src/components/calendar-component.css
@@ -112,6 +112,7 @@
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 6;
+  white-space: pre-wrap;
 }
 .calendar-component-image1 {
   width: 200px;
