--- a/src/components/calendar-component.css
+++ b/src/components/calendar-component.css
@@ -5,11 +5,11 @@
   position: relative;
   align-items: flex-start;
   flex-direction: row;
+  padding: var(--dl-space-space-tripleunit);
 }
 .calendar-component-calendar-item {
   width: 100%;
   height: 247px;
-  margin: var(--dl-space-space-tripleunit);
   display: flex;
   padding: var(--dl-space-space-doubleunit);
   z-index: 70;
@@ -102,7 +102,11 @@
 }
 .calendar-component-text2 {
   color: var(--dl-color-gray-white);
-  overflow-wrap: break-word;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-width: 230px;
+  max-width: 100%;
 }
 .calendar-component-text3 {
   color: var(--dl-color-gray-white);
