--- a/src/components/calendar-component.css
+++ b/src/components/calendar-component.css
@@ -9,11 +9,11 @@
 }
 .calendar-component-calendar-item {
   width: 100%;
-  height: 247px;
+  min-height: 247px;
   display: flex;
   padding: var(--dl-space-space-doubleunit);
   z-index: 70;
-  align-items: flex-start;
+  align-items: stretch;
   border-radius: var(--dl-radius-radius-largeradius);
   flex-direction: row;
   background-color: var(--dl-color-secondary-dimblue);
@@ -41,9 +41,8 @@
   margin: var(--dl-space-space-tripleunit);
 }
 .calendar-component-container3 {
-  top: 85px;
-  left: 50px;
-  width: 100px;
+  top: 100px;
+  bottom: 0px;
   height: 80px;
   display: flex;
   position: absolute;
@@ -85,7 +84,6 @@
 .calendar-component-container4 {
   flex: 0 0 auto;
   width: 3px;
-  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: var(--dl-color-primary-lightred);
@@ -110,7 +108,7 @@
 }
 .calendar-component-text3 {
   color: var(--dl-color-gray-white);
-  display: -webkit-box;
+  display: inline-block;
   overflow: hidden;
   text-align: justify;
   text-overflow: ellipsis;
@@ -120,20 +118,14 @@
 }
 .calendar-component-image1 {
   width: 200px;
-  height: 100%;
+  max-height:400px;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius4);
   border-top-right-radius: var(--dl-radius-radius-largeradius);
   border-bottom-right-radius: var(--dl-radius-radius-largeradius);
 }
 
-@media(max-width: 1200px) {
-  .calendar-component-icon {
-    width: 226px;
-    height: 213px;
-  }
-}
-@media(max-width: 767px) {
+@media(max-width: 940px) {
   .calendar-component-calendar-item {
     height: fit-content;
     align-items: center;
@@ -167,13 +159,13 @@
     justify-content: center;
   }
   .calendar-component-container4 {
-    width: 80%;
+    width: 90%;
     height: 3px;
     align-self: center;
     margin-bottom: var(--dl-space-space-doubleunit);
   }
   .calendar-component-container5 {
-    width: 80%;
+    width: 90%;
     padding-left: 0px;
     padding-right: 0px;
   }
